force-app/main/default/objects/blng__PaymentAllocationDebitNoteLine__c/blng__PaymentAllocationDebitNoteLine__c.object-meta.xml
<CustomObject>
    <label>Payment Allocation (Debit Note Line)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations (Debit Note Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>