force-app/main/default/objects/blng__PaymentAllocationDebitNoteLine__c/fields/blng__DebitNoteAllocationId__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitNoteAllocationId__c</fullName>
    <externalId>true</externalId>
    <label>DebitNoteAllocationId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>