force-app/main/default/objects/blng__PaymentAllocationDebitNoteLine__c/fields/blng__InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
    <relationshipName>PaymentAllocationsDebitNoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>