force-app/main/default/objects/blng__PaymentAllocationDebitNoteLine__c/fields/blng__LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>blng__LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
    <relationshipName>Payment_Allocations_Debit_Note_Line</relationshipName>
    <type>Lookup</type>
</CustomField>