force-app/main/default/objects/blng__PaymentAllocationDebitNoteLine__c/fields/blng__Payment__c.field-meta.xml
<CustomField>
    <fullName>blng__Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>blng__Payment__c</referenceTo>
    <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
    <relationshipName>PaymentAllocationsDebitNoteLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>